--- a/src/components/Theme/theme.css
+++ b/src/components/Theme/theme.css
@@ -19,3 +19,10 @@
   align-items: center;
   cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+  .bg-themechange {
+    width: 40px;
+    height: 40px;
+  }
+}
